# zhvm

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  compare.cpp  convert_zhi.ps1  doxygen.txt  embed_exe.ps1  hello.cpp  hexdump.cpp  install.sh  test_app_obf.zsf  test_app_protected.zhi  test_app_virtualized.zsf  test_protected.zhi  test_protection.zsf
contrib/: CMakeLists.txt
include/: zhtime.h  zhvm.h  zlg.h  zyaml.h
include/zhvm/: assembler.h  cmplv2.class.h  cmplv2.h  constants.h  interpreter.h  memory.class.h
include/zlg/: ast.class.h  context.class.h  node.class.h
include/zlg/node/: binop.class.h  block.class.h  const.class.h  error.class.h  if.class.h  ifelse.class.h  inline.class.h  null.class.h  prev.class.h  print.class.h  unop.class.h  var.class.h  while.class.h
share/: CMakeLists.txt  test-001.zsf  test-002.zsf  test-002e.zsf  test-003.zsf  test-004.zsf  zlang.md  zsf.nanorc
share/ccompare/: README.md  test.cpp  test.java  test.lua  test.py
src/bfc/: CMakeLists.txt  bfc.cpp  bfc.h  bfc.lex
src/cmplv2/: CMakeLists.txt  entry.cpp
src/exec/: CMakeLists.txt  exec.cpp
src/repl/: CMakeLists.txt  main.cpp
src/stub/: main.cpp
src/zhvm/: CMakeLists.txt  assembler.cpp  cmplv2.class.cpp  cmplv2.lex  interpreter.cpp  memory.class.cpp  zhtime.cpp
src/zhvm/win32/: cmplv2.gen.cpp  cmplv2.gen.h
src/zlg/: CMakeLists.txt  ast.class.cpp  context.class.cpp  zlg.lex  zlg.y
src/zlgc/: CMakeLists.txt  zlgc.cpp
tests/: CMakeLists.txt  run-tests.cpp
